--- a/premier.css
+++ b/premier.css
@@ -14,6 +14,15 @@ a {
   text-decoration: none;
 }
 
+header, footer {
+  background-color: black;
+  padding:20px;
+}
+
+header a, footer a, footer p {
+  color: white !important;
+}
+
 /* mutualisation */
 .vert {
   color: green;
