--- a/premier.css
+++ b/premier.css
@@ -34,6 +34,15 @@ section {
   color: green;
 }
 
+h2 {
+  font family: sans-serif;
+  margin-bottom: 20px;
+}
+
+article {
+  border-top: 1px solid black;
+}
+
 /* spécifiques */
 nav a {
   color: red;
