--- a/premier.css
+++ b/premier.css
@@ -42,11 +42,14 @@ h2 {
 article {
   border-top: 1px solid black;
   margin-bottom:20px;
-  border:1px solid red;
 }
 
-article:first {
-  border-top: 0px;
+article:first-child {
+  border: 1px solid white !important;
+}
+
+article p {
+  align-content : left;
 }
 
 /* spécifiques */
@@ -62,6 +65,13 @@ footer p {
   font-size:12px;
 }
 
-article img {
-  width:30%;
+.image
+{
+  width: 30%;
+  float: right;
+  margin: 20px;
+}
+
+article p {
+  text-align: justify;
 }
